# kingdoms.tax

./: LICENSE.md  README.md  go.mod  go.sum  mock.js
backend/: auth.go  go.mod  go.sum  info.txt  main.go  mock.js
backend/controllers/: auth.go  base.go  indexer.go  transactions.go
backend/db/: pipelines.go  service.go  transactions.go
backend/models/: account.go  questReward.go  transaction.go
backend/routes/: indexer.go  transactions.go
backend/utils/: auth.go  bigint.go
dfk-txns-be/: README.md  go.mod  info.txt  main.go  mock.js  server.go
dfk-txns-fe/: dev.out  package-lock.json  package.json
dfk-txns-fe/components/: TransactionInfoTable.tsx  TransactionsTable.tsx
dfk-txns-fe/pages/: index.js  index.tsx
dfk-txns-fe/styles/: globals.css
dfk-txns-indexer/: Cargo.toml  README.md
dfk-txns-indexer/src/: main.rs
dfk-txns-indexer/src/contracts/: Erc20.rs  Erc721.rs  mod.rs
ethers-abigen/: Cargo.toml
ethers-abigen/src/: main.rs
frontend/: constants.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/components/: Button.tsx  CSVModal.tsx  DateTimePicker.tsx  InfiniteScrollExample.tsx  Input.tsx  InventoryCard.tsx  ProgressBar.tsx  QuestRewardCard.tsx  SearchFilterBar.tsx  StatsCard.tsx  TransactionCard.tsx  Transactions.tsx  TransactionsHeader.tsx  TransactionsTableFooter.tsx
indexer/: Cargo.toml  README.md
indexer/src/: main.rs
indexer/src/constants/: abis.json  contracts.json
indexer/src/contracts/: Erc20.rs
prices/: .gitignore  constants.js  index.js  package-lock.json  package.json
(+19 files in other folders)
