[package]
name = "dfk-txns-indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "0.6.2"
tokio = { version = "1.15.0", features = ["full"] }
anyhow = "1.0.51"
serde_json = "1.0.73"
serde = "1.0.117"