[package]
name = "ethers-gen"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
clap = { version = "3.0.0-beta.2", features = ["derive"] }
anyhow = "1.0.52"
ethers = "0.6.2"
